[workspace]
members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz"]
default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]
resolver = "2"

[profile.bench]
debug = true

[profile.release]
debug = true

[patch."crates-io"]
rustls = { git = "https://github.com/rustls/rustls", branch = "quinn-support" }
